--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,7 @@
     "system_error": "cpp",
     "tuple": "cpp",
     "type_traits": "cpp",
-    "utility": "cpp",
+    "HELPER": "cpp",
     "initializer_list": "cpp",
     "iosfwd": "cpp",
     "iostream": "cpp",
@@ -49,7 +49,9 @@
     "typeinfo": "cpp",
     "iomanip": "cpp",
     "ctime": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "fstream": "cpp",
+    "utility": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "C:/msys64/mingw64/bin/g++.exe",
   "C_Cpp_Runner.cppCompilerPath": "g++",
@@ -58,22 +60,13 @@
   "C_Cpp_Runner.cppStandard": "",
   "C_Cpp_Runner.msvcBatchPath": "",
   "C_Cpp_Runner.useMsvc": false,
-  "C_Cpp_Runner.warnings": [
-    "-Wall",
-    "-Wextra",
-    "-Wpedantic"
-  ],
+  "C_Cpp_Runner.warnings": ["-Wall", "-Wextra", "-Wpedantic"],
   "C_Cpp_Runner.enableWarnings": true,
   "C_Cpp_Runner.warningsAsError": false,
   "C_Cpp_Runner.compilerArgs": [],
   "C_Cpp_Runner.linkerArgs": [],
-  "C_Cpp_Runner.includePaths": [
-    "C:/msys64/mingw64/include"
-  ],
-  "C_Cpp_Runner.includeSearch": [
-    "*",
-    "**/*"
-  ],
+  "C_Cpp_Runner.includePaths": ["C:/msys64/mingw64/include"],
+  "C_Cpp_Runner.includeSearch": ["*", "**/*"],
   "C_Cpp_Runner.excludeSearch": [
     "**/build",
     "**/build/**",
